--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -69,7 +69,7 @@ h1, h2, h3, h4, h5, h6 {
 **********************************
 */
 .p-all-2 {
-  padding: 2vw;
+  padding: 1vw;
 }
 
 /*
@@ -614,7 +614,7 @@ footer > p {
   }
   /*
   **********************************
-  ***********MENU BURGER************
+  **************HEADER**************
   **********************************
   */
   .menu-mobile {
@@ -626,9 +626,23 @@ footer > p {
   .menu-desktop {
     display: block;
   }
-  .menu-desktop figure,
-  .menu-desktop img {
-    width: 25%;
+  .menu-desktop figure:nth-of-type(1) a img {
+    width: 7vw;
+  }
+  .menu-desktop figure:nth-of-type(2) a img {
+    width: 3vw;
+  }
+  .menu-desktop figure:nth-of-type(3) a img {
+    width: 5vw;
+    height: 5vw;
+    -o-object-fit: cover;
+       object-fit: cover;
+    border-radius: 50%;
+  }
+  .menu-desktop div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 }
 @media (min-width: 1440px) {
