--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -73,7 +73,7 @@ h1,h2,h3,h4,h5,h6 {
 **********************************
 */
 .p-all-2 {
-  padding: 2vw;
+  padding: 1vw;
 }
 
 /*
@@ -692,7 +692,7 @@ padding: 0 20px;
     
   /*
 **********************************
-***********MENU BURGER************
+**************HEADER**************
 **********************************
 */
 
@@ -707,12 +707,31 @@ padding: 0 20px;
   .menu-desktop {
     display: block;
 
-    & figure,
-    img {
-      width: 25%;
+    figure:nth-of-type(1)a img {
+      width: 7vw;
+    }
+
+    figure:nth-of-type(2)a img {
+      width: 3vw;
+    }
+
+    figure:nth-of-type(3)a img {
+      width: 5vw;
+      height: 5vw;
+      object-fit: cover;
+      border-radius: 50%;
+    }
+
+
+
+    div {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
   }
 }
+
 
 @media (min-width: 1440px) {
 
