Center figures in forms by adding margin auto to styles

--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -760,4 +760,5 @@ figure {
 }
 .formulaire figure {
   text-align: center;
+  margin: 0 auto; /* Centrer la figure */
 }/*# sourceMappingURL=styles.css.map */
