--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -77,6 +77,11 @@ h1,h2,h3,h4,h5,h6 {
 .p-all-2 {
   padding: 1vw;
 }
+.flexcenter{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 /*
 **********************************
@@ -622,8 +627,19 @@ padding: 0 20px;
         display: block;
         width: 60vw;
       }
-    
+  /*
+*******************************
+***********contact***********
+*******************************
+*/  
+.formulaire{
+margin: 0 auto;}
+
+
+
 }
+
+
 
 @media (min-width: 768px) {
 /*
@@ -658,7 +674,15 @@ padding: 0 20px;
         display: block;
         width: 60vw;
       }
-    
+      /*
+*******************************
+***********contact***********
+*******************************
+*/  
+.formulaire{
+  margin: 0 auto;}
+  
+
 }
 
 @media (min-width: 1024px) {
@@ -696,6 +720,16 @@ padding: 0 20px;
         width: 60vw;
       }
     
+      /*
+*******************************
+***********contact***********
+*******************************
+*/  
+.formulaire{
+  margin: 0 auto;
+  max-width: 024px;
+}
+
   /*
 **********************************
 **************HEADER**************
@@ -1092,20 +1126,45 @@ padding: 0 20px;
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*
 **********************************
 ***********CONTACT PAGE************
 **********************************
 */
 
-figure{
-    text-align: center;
-}
+
+
+
 .formulaire{
     display:flex;
     flex-direction: column;
+    justify-content: center;
     background-color: #A2EEFB;
     border-radius: 10px;
+    outline: 3px solid #ffffff;
+    max-width: 600px; 
+    margin: 20px;
 
     h2{text-align: center;
       font-family: var(--ff-bangers);
@@ -1119,6 +1178,7 @@ figure{
         border-radius: 10px;
         border: none;
         background-color: #F5F5F5;
+        outline: 1px solid #B3B34E;
     }
 
 
@@ -1127,7 +1187,7 @@ figure{
       padding: 1%;
       border-radius: 10px;
       border: none;
-      background-color: #cc392b;
+      background-color: #FCC8E1;
       color: #ffffff;
       font-family: var(--ff-bangers);
       cursor: pointer;
@@ -1136,10 +1196,11 @@ figure{
       &:hover{
           background-color: #cc1606;
       }
-  }
-  figure {
-    text-align: center;
-    margin: 0 auto; /* Centrer la figure */
-  }
-}
+  
 
+    }  
+    
+    
+  
+}
+  
