--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -639,7 +639,7 @@ footer > p {
     flex-direction: row;
   }
   .menu-desktop figure:nth-of-type(2) img {
-    width: 3vw;
+    width: 2.4vw;
   }
   .menu-desktop figure:nth-of-type(3) a img {
     width: 5vw;
@@ -689,13 +689,26 @@ footer > p {
   }
   .menu-desktop input {
     color: #333;
-    width: 5%;
+    width: 22%;
     height: 5vh;
     padding: 0 10px;
+    font-size: 1.2rem;
+    border: 1px solid #979797;
+    font-family: var(--ff-barlow);
+    border-radius: 50px;
+    transition: all ease 0.8s;
   }
   .menu-desktop input:focus {
-    border-color: blue;
+    border: 1px solid #cc392b;
+    border-radius: 50px;
     width: 100%;
+    outline: none;
+  }
+  .menu-desktop input:focus::-moz-placeholder {
+    color: transparent;
+  }
+  .menu-desktop input:focus::placeholder {
+    color: transparent;
   }
 }
 @media (min-width: 1440px) {
