--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Bangers&family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Kaisei+Tokumin&display=swap");
 /*
 **********************************
@@ -474,7 +473,7 @@ footer > p {
   transition: transform 0.5s ease;
 }
 .category-slider .slider .manga {
-  position: relative; /* Important pour positionner l'élément à l'intérieur */
+  position: relative;
   padding: 10px;
   border-radius: 5px;
   text-align: center;
@@ -518,6 +517,46 @@ footer > p {
 .category-slider .slider button:disabled {
   opacity: 0.5;
   cursor: not-allowed;
+}
+
+#our-fav div:first-child {
+  display: flex;
+  padding: 10px;
+  font-family: var(--ff-bangers);
+  letter-spacing: var(--letter-spacing);
+}
+#our-fav div:first-child h2 {
+  margin: var(--m-all-5);
+}
+#our-fav .bubble-fav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.1rem;
+  padding: 10px 20px;
+}
+#our-fav .bubble-fav a {
+  color: #cc392b;
+}
+#our-fav .bubble-fav a:hover {
+  color: #cc1606;
+}
+#our-fav .bubble-fav h3 {
+  font-family: var(--ff-bangers);
+  letter-spacing: var(--letter-spacing);
+  margin-bottom: var(--mb-5);
+}
+#our-fav .bubble-fav hr {
+  margin-bottom: var(--mb-5);
+  background-color: black;
+  height: 1px;
+}
+#our-fav .bubble-fav p {
+  font-family: var(--ff-barlow);
+}
+#our-fav .bubble-fav figure {
+  padding: 10px 20px;
 }
 
 /*
