--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -86,6 +86,27 @@ h1,h2,h3,h4,h5,h6 {
 .menu-mobile {
   display: flex;
   justify-content: space-between;
+
+  .test {
+    display: flex;
+    input {
+      color: #333;
+      width: 22%;
+      height: 5vh;
+      padding: 0 10px;
+      font-size: 1.2rem;
+      border: 1px solid #979797;
+      font-family: var(--ff-barlow);
+      border-radius: 50px;
+      transition: all ease 0.8s;
+      &:focus{
+        border: 1px solid #cc392b;
+        border-radius: 50px;
+        width: 80%;
+        outline: none;
+      }
+    }
+  }
 }
 
 /*
